# pwa-experiment

./: .eslintrc.cjs  .gitignore  README.md  package-lock.json  package.json  server.js  tsconfig.json  vite.config.ts
app/: globals.d.ts  intl.tsx  keybind.ts  main.css  resizer-observer.ts  root.tsx  text.ts
app/cameras/: camera.ts  cube.wgsl  input.ts  main.js  plane.wgsl  readme.md
app/cameras/meshes/: cube.ts  plane.ts
app/editor/: editor.tsx  inspector.module.css  inspector.tsx
app/node-graph/: graph.module.css  graph.tsx  grid.ts
public/: entry.worker.js
rect-project/: CMakeLists.txt  main.cc
